--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,22 +7,64 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:orientation="vertical"
-    android:layout_gravity="center">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Study!"
-        android:id="@+id/maintext"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    android:layout_gravity="bottom|center_horizontal">
 
     <Button
-        android:id="@+id/donebutton"
+        android:id="@+id/resetbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="I studied today" />
+        android:text="@string/resetbtn"
+        android:textColor="#FFFFFF"
+        android:backgroundTint="#CC0000"
+        android:layout_gravity="end"/>
+
+    <!-- FOR PADDING -->
+    <TextView
+        android:layout_width="200dp"
+        android:layout_height="250dp"
+        android:text=""/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:gravity="center">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/study"
+            android:id="@+id/maintext"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/donebutton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/studiedbtn" />
+    </LinearLayout>
+
+    <!-- FOR PADDING -->
+    <TextView
+        android:layout_width="200dp"
+        android:layout_height="320dp"
+        android:text=""/>
+
+    <TextView
+        android:id="@+id/days_streak_str"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/zero"
+        android:textSize="50sp"
+        android:gravity="center"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/streaktxt"
+        android:textSize="20sp"
+        android:gravity="center"/>
 
 </LinearLayout>
